# ledist-pi

./: Cargo.toml  README.md
data/: runtime.toml
data/trains/e233-2000/: profile.toml
data/trains/e233-2000/templates/: intermediate-through.txt
data/trains/e233-7000/: profile.toml
data/trains/e233-7000/templates/: depart-station.txt  intermediate-through.txt  scroll-notice.txt
data/trains/e233-9000/: profile.toml
data/trains/e233-test/: profile.toml
data/trains/e353/: profile.toml
data/trains/e353/templates/: standard.txt
data/trains/yosan-usotrain/: profile.toml
data/trains/yosan-usotrain/templates/: scroll-notice.txt
docs/superpowers/plans/: 2026-06-22-led-display-initial.md  2026-06-23-live-preview.md  2026-06-24-scroll-cycle-and-reset.md
docs/superpowers/specs/: 2026-06-23-live-preview-design.md  2026-06-24-scroll-cycle-and-reset-design.md
src/: assets.rs  compiler.rs  display.rs  dsl.rs  e233.rs  font.rs  frame.rs  lib.rs  main.rs  profile.rs  runner.rs  runtime.rs  script.rs  web.rs
tests/: dsl.rs  e233.rs  e233_profile.rs  font_and_runtime.rs  frame_and_display.rs  profile_and_assets.rs  runner.rs  script.rs  web_api.rs
web/: app.js  index.html
